AddTaskTodoMicroservice/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addtask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: addtask
  template:
    metadata:
      labels:
        app: addtask
    spec:
      containers:
      - name: addtask
        image: devtodoacrwestus.azurecr.io/addtask:latest
        ports:
        - containerPort: 8000
