AddTaskTodoMicroservice/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addtask
  labels:
    name: addtask
spec:
  rules:
  - host: todo-add-task.gauravrajsingh369.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: addtask
            port: 
              number: 80
